modificacion de enlace facebook en footer

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -52,7 +52,7 @@
                 <div class="box">
                     <h2>SIGUENOS</h2>
                     <div class="red-social">
-                        <a href="https://www.facebook.com/nancyojeda16673" target="_blank" class="fa fa-facebook"></a>
+                        <a href="https://www.facebook.com/profile.php?id=100082917436713" target="_blank" class="fa fa-facebook"></a>
                         <a href="https://www.instagram.com/magica_mente22/" target="_blank" class="fa fa-instagram"></a>
                     </div>
                 </div>
