--- a/pages/informacion.html
+++ b/pages/informacion.html
@@ -37,18 +37,6 @@
         </nav>
     </header>
 
-    <div>
-        <section class="section__inf">
-            <div class="section__img__inf">
-                <img src="../assets/profile-img.jpg" alt="tejedora" class="img__inf">
-            </div>
-            <div class="section__inf">
-                <h1 class="title__inf">Un poco sobre mí</h1>
-                <p class="text__inf">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel suscipit placeat quia error temporibus, illo tenetur impedit optio quod, fuga officiis neque numquam atque eum hic eveniet! Eius provident at sapiente asperiores neque tenetur quisquam eligendi? Qui laboriosam tempora, omnis officia laborum dolorum? Odio cumque dolorem nobis quisquam sapiente repellat laborum neque debitis iure quod officiis voluptatem hic, provident sint sit quam ipsum.</p>
-            </div>
-        </section>
-    </div>
-
         <!-- Footer -->
         <footer class="pie-pagina">
             <div class="grupo-1">
@@ -64,7 +52,7 @@
                 <div class="box">
                     <h2>SIGUENOS</h2>
                     <div class="red-social">
-                        <a href="https://www.facebook.com/nancyojeda16673" target="_blank" class="fa fa-facebook"></a>
+                        <a href="https://www.facebook.com/profile.php?id=100082917436713" target="_blank" class="fa fa-facebook"></a>
                         <a href="https://www.instagram.com/magica_mente22/" target="_blank" class="fa fa-instagram"></a>
                     </div>
                 </div>
