--- a/pages/redes.html
+++ b/pages/redes.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/style.css">
     <title>Mágica Mente</title>
+    
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&family=Open+Sans:wght@300;400;700&family=Roboto:wght@300;700&display=swap" rel="stylesheet">
@@ -37,6 +38,10 @@
         </nav>
     </header>
 
+<!-- REDES START -->
+
+<!-- REDES END -->
+
         <!-- Footer -->
         <footer class="pie-pagina">
             <div class="grupo-1">
@@ -52,7 +57,7 @@
                 <div class="box">
                     <h2>SIGUENOS</h2>
                     <div class="red-social">
-                        <a href="https://www.facebook.com/nancyojeda16673" target="_blank" class="fa fa-facebook"></a>
+                        <a href="https://www.facebook.com/profile.php?id=100082917436713" target="_blank" class="fa fa-facebook"></a>
                         <a href="https://www.instagram.com/magica_mente22/" target="_blank" class="fa fa-instagram"></a>
                     </div>
                 </div>
@@ -62,5 +67,6 @@
             </div>
         </footer>
         <!-- Footer end -->
+
 </body>
 </html>
